--- a/estilo.css
+++ b/estilo.css
@@ -43,7 +43,7 @@ width: 34%  ;
 }
 .secao1{
 
-    background: red;
+    background: #041044;
     background:linear-gradient(blak);
     display: flex;
 }
